--- a/nethari.html
+++ b/nethari.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles_race.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
-    <title>Crowfall Powers Human</title>
+    <title>Crowfall Powers Nethari</title>
 </head>
 
 <nav>
@@ -29,19 +29,16 @@
 </nav>
 <body>
     <div class="race-container">
-        <div class="race-image"><img src="images/Race/UI_Icon_CharCreate_Race_Human_01.png" width="250rem" height="250rem"></div>
-        <div class="race-name"><h1>Human</h1></div>
+        <div class="race-image"><img src="images/Race/UI_Icon_CharCreate_Race_Nethari_01.png" width="250rem" height="250rem"></div>
+        <div class="race-name"><h1>Nethari</h1></div>
         <div class="race-classes"><h2>Available Classes</h2></div>
         <div class="container-class-icons">    
             <div>
-                 <a href="cleric.html" target="_blank"><img src="images/Class/CF_Class_cleric.png"><div>Cleric</div></a>
+                 <a href="assassin.html" target="_blank"><img src="images/Class/CF_Class_assassin.png"><div>Assassin</div></a>
             </div>
             <div>
-                <a href="knight.html" target="_blank"><img src="images/Class/CF_Class_knight.png"><div>Knight</div></a>
-            </div>
-            <div>
-                <a href="ranger.html" target="_blank"><img src="images/Class/CF_Class_ranger.png"><div>Ranger</div></a>
-            </div>
+                <a href="confessor.html" target="_blank"><img src="images/Class/CF_Class_confessor.png"><div>Confessor</div></a>
+            </div>           
             <div>
                 <a href="templar.html" target="_blank"><img src="images/Class/CF_Class_templar.png"><div>Templar</div></a>
             </div>                     
@@ -49,14 +46,14 @@
         <div class="race-disciplines"><h2>Race Disciplines</h2></div>
         <div class="race-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            Cloisterer<br>
-            Freedom Fighter<br>
-            Standard Bearer<br>
-            Thorny Warrior            
+            C<br>
+            F<br>
+            S<br>
+            T            
             <h3><a href="#minors">Minors</a></h3>
-            Guardian Rhythms<br>
-            Sparring<br>
-            Underdog            
+            G<br>
+            S<br>
+            U            
         </div>
     </div>           
 
